--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ backend/db.sqlite3
 .idea/Rekrutacja_Szkola_Shortener.iml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
+backend/core/db.sqlite3
