--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.26.6",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
